tryphon_macros/tests/ui/fail/config_on_option.rs
use tryphon::Config;

#[derive(Config)]
struct NestedConfig {
    #[env("VALUE")]
    value: String,
}

#[derive(Config)]
struct BadConfig {
    #[config]
    nested: Option<NestedConfig>,  // Invalid
}

fn main() {}
